@@ -63,6 +63,12 @@ fi
 AC_CHECK_FUNCS([fork setxattr fdatasync])
 AC_CHECK_MEMBERS([struct stat.st_atim])
 
+libfuse_libs=-lpthread
+AC_SEARCH_LIBS(clock_gettime, [rt], [libfuse_libs="$libfuse_libs -lrt"])
+LIBS=
+
+AC_SUBST(libfuse_libs)
+
 if test -z "$MOUNT_FUSE_PATH"; then
 	MOUNT_FUSE_PATH=/sbin
 fi
